# NoiPhi

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  convert.py  core.py  noise.py  pyproject.toml
.github/workflows/: ci.yml
demos/data/: Diode918nm_VoltageNoise_highfreq.csv  Diode918nm_VoltageNoise_lowfreq.csv  TiSapph1039nm_VoltageNoise_highfreq.csv  TiSapph1039nm_VoltageNoise_lowfreq.csv
demos/physics/: Rabi_Oscill_Phase_Noisy.py  Ramsay_fringe_noisy.py  Ramsey_fringe_demo.py  main_Rydbuild.py  many_body_Ising.py  many_body_Ising_grEvo.py
demos/usage/: Extrapolation.py  FreqPSDtoPhaseNoise.py  VoltagePSDtoPhaseNoise.py  n_sampling_override.py  noise_analysis.py
examples/: demo_FreqPSDtoPhaseNoise.py
examples/data/: 795nm_freqNoise_red.csv  950nm_freqNoise_blue.csv  950nm_freqNoise_blueENHANCED.csv  Diode918nm_VoltageNoise_highfreq.csv  TiSapph1039nm_VoltageNoise_lowfreq.csv
src/noiphi/: __init__.py  analysis_tools.py  conversion_tools.py  convert.py  core.py  noise.py
tests/: test_analysis.py  test_conversion.py  test_core.py
