[project]
name = "noiphi"
version = "0.1.0"
authors = [
  { name="Tomas Kozlej", email="tomaskoztwo@gmail.com" },
]
description = "A phase noise simulator using the TK95 algorithm"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4"
]
